# RouteRL

./: .buildinfo  .capsule.yml  .dockerignore  .gitattributes  .gitignore  .todo  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ConvergenceCongestedOrNot.ipynb  ConvergenceOnDIfferentNumberofPaths.ipynb  Dockerfile  HyperparametersOneAgent.ipynb  Implement learning in one agent.ipynb  LICENSE.txt  MinRewardForDifferentNumofAgents.ipynb  Multi-agent learning env - PettingZoo.ipynb  MultiAgentWrapper.py  One-agent-experiments.ipynb  Presentations.ipynb  README.md  SelfishVsAltruisticAgents.ipynb  Sumo_controller.py  Untitled-1.ipynb  __init__.py  agent.py  agents_data.csv  agents_data_path  benchmarkKPIS.py  create_agents.py  deneme.py  entrypoint.sh  environment.py  environment_2.py  ep1.csv  ep1.xml  episode_1.csv  generate_agent_data.py  generate_paths.py  genindex.html  (+29 more)
.github/: PULL_REQUEST_TEMPLATE.md
.ipynb_checkpoints/: Implement learning in one agent-checkpoint.ipynb  Multi-agent learning env - PettingZoo-checkpoint.ipynb
Network_and_config/: arterial.tll.xml  cologne.nod.xml  csomor.con 2.xml  csomor.sumocfg  csomor.typ 2.xml  csomor1 2.sumocfg  csomor1.edg 2.xml  csomor1.nod 2.xml  csomor1.sumocfg  grid.con.xml  grid.edg.xml  grid4x4.sumocfg  ingolstadt21.sumocfg  paths 2.csv  paths.csv  paths_0_0.csv  rou.rou.xml  route.rou.xml  summary.xml  tripinfo.xml
RouteRL/: __init__.py  create_agents.py  generate_agent_data.py  generate_paths.py  keychain.py
_modules/: index.html
_sources/: index.md.txt
_static/: agents_example.csv  kwargs_box.css
action_reward_observation/: actions.html  observations.html  rewards.html
components/: __init__.py  agent.py  environment.py  observations.py  simulator.py
diagrams/: body.html
docs/: REFERENCES.bib  RouteRL.environment.rst  RouteRL.rst  conf.py  index.md  index.rst  modules.rst  simulator.rst
documentation/: human_agents.html  human_models.html  machine_agents.html  observations.html  pz_env.html  simulator.html
environment/: __init__.py  agent.py  environment.py  observations.py  phases.py  plot_xml_files.py  simulator.py
experiments/: ConvergenceOnDIfferentNumberofPaths.ipynb  ExperimentOnDifferentRlAlgorithmsUsing1agent.ipynb  Presentations.ipynb  SelfishVsAltruistic2Agents.ipynb  Steble-PettingZoo.ipynb  TutorialStableBaselinesParameters.ipynb  dqn_tutorial.ipynb  generate_paths.py  humans_mutation_ppo.ipynb  humans_mutation_sac.ipynb  main.py  min_reward.txt  mutation_machines_double_dqn.ipynb  mutation_machines_dqn_prioritized_experience_replay.ipynb  mutation_machines_dueling_dqn.ipynb  only_humans.ipynb  only_humans_mutation.ipynb  only_machines_dqn.ipynb  only_machines_ppo.ipynb  only_machines_sac.ipynb
human_learning/: __init__.py  decision_models.py
(+55012 files in other folders)
