[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "routerlurb"
version = "1.0.0"
description = "RouteRL is a multi-agent reinforcement learning framework for urban route choice in different city networks. This subpackage is developed to support its compatibility with URB until the full integration."
authors = [
    { name = "COeXISTENCE", email = "coexistence@uj.edu.pl" }
]
readme = "README.md"
license = { text = "MIT License" }
keywords = ["routing", "marl", "transportation", "rl", "autonomous", "vehicles", "traffic"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gymnasium==1.0.0",
    "janux>=1.0.0",
    "matplotlib>=3.9.3",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pettingzoo==1.24.3",
    "polars==1.27.1",
    "prettytable>=3.12.0",
    "requests>=2.32.0",
    "seaborn>=0.13.2",
    "tensordict==0.7.0",
    "torch>=2.6.0",
    "torchrl==0.7.0",
    "tqdm>=4.67.1",
    "traci==1.21.0"
]

[tool.setuptools.package-data]
"*" = ["*.json", "*.xml", "*.sumocfg"]

[project.urls]
repository = "https://github.com/COeXISTENCE-PROJECT/RouteRL"
"Bug Report" = "https://github.com/COeXISTENCE-PROJECT/RouteRL/issues"

[tool.setuptools.packages.find]
include = ["routerl", "routerl.*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]
